tests/dataset/tpc-ds/compiler/c/q48.error
/tmp/TestCCompiler_TPCDS_Goldenq482036163363/001/prog.c: In function ‘main’:
/tmp/TestCCompiler_TPCDS_Goldenq482036163363/001/prog.c:270:7: error: conflicting types for ‘states1’; have ‘int’
  270 |   int states1 = states1;
      |       ^~~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq482036163363/001/prog.c:268:15: note: previous definition of ‘states1’ with type ‘list_string’
  268 |   list_string states1 = list_string_create(1);
      |               ^~~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq482036163363/001/prog.c:273:7: error: conflicting types for ‘states2’; have ‘int’
  273 |   int states2 = states2;
      |       ^~~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq482036163363/001/prog.c:271:15: note: previous definition of ‘states2’ with type ‘list_string’
  271 |   list_string states2 = list_string_create(1);
      |               ^~~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq482036163363/001/prog.c:276:7: error: conflicting types for ‘states3’; have ‘int’
  276 |   int states3 = states3;
      |       ^~~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq482036163363/001/prog.c:274:15: note: previous definition of ‘states3’ with type ‘list_string’
  274 |   list_string states3 = list_string_create(1);
      |               ^~~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq482036163363/001/prog.c:277:46: error: ‘(store_sale_t *)&store_sales’ is a pointer; did you mean to use ‘->’?
  277 |   list_int tmp1 = list_int_create(store_sales.len * customer_demographics.len *
      |                                              ^
      |                                              ->
/tmp/TestCCompiler_TPCDS_Goldenq482036163363/001/prog.c:277:74: error: ‘(customer_demographic_t *)&customer_demographics’ is a pointer; did you mean to use ‘->’?
  277 |   list_int tmp1 = list_int_create(store_sales.len * customer_demographics.len *
      |                                                                          ^
      |                                                                          ->
/tmp/TestCCompiler_TPCDS_Goldenq482036163363/001/prog.c:278:51: error: ‘(customer_addres_t *)&customer_address’ is a pointer; did you mean to use ‘->’?
  278 |                                   customer_address.len * date_dim.len);
      |                                                   ^
      |                                                   ->
/tmp/TestCCompiler_TPCDS_Goldenq482036163363/001/prog.c:278:66: error: ‘(date_dim_t *)&date_dim’ is a pointer; did you mean to use ‘->’?
  278 |                                   customer_address.len * date_dim.len);
      |                                                                  ^
      |                                                                  ->
/tmp/TestCCompiler_TPCDS_Goldenq482036163363/001/prog.c:307:51: warning: passing argument 2 of ‘contains_list_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  307 |                 ((contains_list_string(states1, ca.ca_state) &&
      |                                                 ~~^~~~~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq482036163363/001/prog.c:68:54: note: expected ‘char *’ but argument is of type ‘const char *’
   68 | static int contains_list_string(list_string v, char *item) {
      |                                                ~~~~~~^~~~
/tmp/TestCCompiler_TPCDS_Goldenq482036163363/001/prog.c:309:51: warning: passing argument 2 of ‘contains_list_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  309 |                  (contains_list_string(states2, ca.ca_state) &&
      |                                                 ~~^~~~~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq482036163363/001/prog.c:68:54: note: expected ‘char *’ but argument is of type ‘const char *’
   68 | static int contains_list_string(list_string v, char *item) {
      |                                                ~~~~~~^~~~
/tmp/TestCCompiler_TPCDS_Goldenq482036163363/001/prog.c:311:51: warning: passing argument 2 of ‘contains_list_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  311 |                  (contains_list_string(states3, ca.ca_state) &&
      |                                                 ~~^~~~~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq482036163363/001/prog.c:68:54: note: expected ‘char *’ but argument is of type ‘const char *’
   68 | static int contains_list_string(list_string v, char *item) {
      |                                                ~~~~~~^~~~
